# QNN_backend_implementation

./: CMakeLists.txt  MULTI_CONTEXT_GUIDE.md  QNN_DECODE_STATUS.md  README.md  README_MODULES.md  REFACTORING_SUMMARY.md  test_generate.sh
.cache/clangd/index/: binary_provider.cpp.9EA98477C1066EA1.idx  binary_provider.h.BD5964CE3B61CEC7.idx  main.cpp.9982CA5F9F4F4286.idx  qnn_loader.cpp.472E087B55BBBEBD.idx  qnn_loader.h.B110AB5CDBED15D0.idx
apps/: qnn_ctx_init_main.cpp  qnn_decode_main.cpp  qnn_graph_probe_main.cpp  qnn_io_plan_main.cpp  qnn_llm_generate.cpp  qnn_prefill_main.cpp  tok_encode_main.cpp
build-android/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  qnn_ctx_init  qnn_decode  qnn_graph_probe  qnn_io_plan  qnn_llm_generate  qnn_prefill  tok_encode
include/: binary_provider.h  io_alloc.h  io_allocator.h  io_meta.h  llm_decode_runner.h  llm_input_preparer.h  llm_kv_cache_manager.h  llm_kv_cache_mapper.h  llm_output_processor.h  llm_stats.h  model_params.h  qnn_loader.h  qnn_qnnjson.h  qnn_tensor_util.h  tokenizer_llama.h
script/: build_push.sh
src/: README.md  binary_provider.cpp  io_alloc.cpp  io_allocator.cpp  io_meta.cpp  llm_decode_runner.cpp  llm_decode_runner_multi_context.cpp  llm_input_preparer.cpp  llm_kv_cache_manager.cpp  llm_kv_cache_mapper.cpp  llm_output_processor.cpp  model_params.cpp  qnn_loader.cpp  qnn_qnnjson.cpp  qnn_tensor_util.cpp  tokenizer_llama.cpp
